syntax = "proto3";
package todo;


message getTodoParams{}

message addTodoParams{
    string task = 1;
}

message delTodoParams{
    string id = 1;
}

message todoObject{
    string id = 1;
    string task = 2;
}

message todoResponse {
    repeated todoObject todos = 1;
}

message delResponse{
    string message = 1;
}

service todoService {
    rpc addTodo(addTodoParams) returns (todoObject){}
    rpc delTodo(delTodoParams) returns (delResponse){}
    rpc getTodo(getTodoParams) returns (todoResponse){}
}
